add input mode, add css editing, refactor

--- a/app/globals.css
+++ b/app/globals.css
@@ -12,6 +12,15 @@
 
 body {
 }
-
+.stealthy {
+	padding: 0;
+	background: none;
+	border: none;
+	border-radius: 0;
+	outline: none;
+	-webkit-appearance: none;
+	-moz-appearance: none;
+	appearance: none;
+}
 
 @import url('https://fonts.googleapis.com/css2?family=Outfit&display=swap');
